# live-bootcamp-project

./: Cargo.toml  README.md  compose.override.yml  compose.yml
.config/: nextest.toml
.github/workflows/: prod.yml
app-service/: Cargo.toml  Dockerfile
app-service/assets/: app.js
app-service/src/: main.rs
app-service/templates/: index.html
auth-service/: Cargo.toml  Dockerfile
auth-service/.sqlx/: query-246ebfc92d3e38d1444b5f97126296a704bc3cf4d63e1ffff91ac28f8e864eca.json
auth-service/assets/: app.js
auth-service/db-test-macro/: Cargo.toml
auth-service/db-test-macro/src/: lib.rs
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  error.rs  login_attempt_id.rs  mod.rs  password.rs  two_fa_code.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs  mod.rs  slack_message_client.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  mod.rs
auth-service/templates/: index.html
auth-service/tests/api/: helpers.rs  helpers_arrange.rs  helpers_assert.rs  helpers_harness.rs  login.rs  logout.rs  main.rs  root.rs  signup.rs  verify_2fa.rs  verify_token.rs
nginx/conf.d/: local.conf  prod.conf
