[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.3"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
askama = "0.13.1"
async-trait = "0.1.88"
validator = "0.16.1"

[dev-dependencies]
reqwest = { version = "0.12.15", default-features = false, features = ["json"] }
fake = "=2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
